fix to overflow

--- a/style.css
+++ b/style.css
@@ -101,7 +101,11 @@ header {
     position: relative;
     display: inline-block;
     width: 100vw;
+    max-width:100%;
+    padding: 0;
+    margin: 0;
     justify-content: center;
+    border: 0;
     border-bottom: 4px solid rgb(92, 92, 138);
 }
 
@@ -141,3 +145,4 @@ h3.section {
     border: 3px solid cadetblue;
     top: 33px;
 }
+
